# vireo_samples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  renderdoc.cap
cmake/: libraries.cmake  shaders.cmake
include/: Libraries.h  Macros.h  Tools.h
src/os/qt/: QtApplication.cpp  QtApplication.ixx
src/os/windows/: Win32Application.cpp  Win32Application.ixx
src/platform/sdl/: SDLApplication.cpp  SDLApplication.ixx
src/platform/windows/: Win32Application.cpp  Win32Application.ixx
src/samples/: Application.cpp  Application.ixx
src/samples/common/: DepthPrepass.cpp  DepthPrepass.ixx  Global.ixx  PostProcessing.cpp  PostProcessing.ixx  Samplers.cpp  Samplers.ixx  Scene.cpp  Scene.ixx  Skybox.cpp  Skybox.ixx
src/samples/common/renderers/: DepthPrepass.cpp  DepthPrepass.ixx  PostProcessing.cpp  PostProcessing.ixx  Skybox.cpp  Skybox.ixx
src/samples/compute/: ComputeApp.cpp  ComputeApp.ixx  ComputeAppMain.cpp
src/samples/cube/: CubeApp.cpp  CubeApp.ixx  CubeAppMain.cpp  ForwardColorPass.cpp  ForwardColorPass.ixx  Global.ixx  Scene.cpp  Scene.ixx
src/samples/cube/renderers/: ColorPass.cpp  ColorPass.ixx  DepthPrepass.cpp  DepthPrepass.ixx  PostProcessing.cpp  PostProcessing.ixx  Skybox.cpp  Skybox.ixx
src/samples/deferred/: DeferredApp.cpp  DeferredApp.ixx  DeferredAppMain.cpp  DepthPrepass.cpp  DepthPrepass.ixx  GBufferPass.cpp  GBufferPass.ixx  Global.cpp  Global.ixx  LightingPass.cpp  LightingPass.ixx  Scene.cpp  Scene.ixx  TransparencyPass.cpp  TransparencyPass.ixx
src/samples/deferred/renderers/: ColorPass.cpp  ColorPass.ixx  DepthPrepass.cpp  DepthPrepass.ixx  GBufferPass.ixx  PostProcessing.cpp  PostProcessing.ixx  Skybox.cpp  Skybox.ixx
src/samples/hello_triangle/: HelloTriangleApp.cpp  HelloTriangleApp.ixx
src/samples/indirect/: IndirectApp.cpp  IndirectApp.ixx  IndirectAppMain.cpp
src/samples/msaa/: MsaaApp.cpp  MsaaApp.ixx  MsaaAppMain.cpp
src/samples/skybox/: SkyboxApp.cpp  SkyboxApp.ixx
src/samples/triangle/: TriangleApp.cpp  TriangleApp.ixx  TriangleAppMain.cpp
src/samples/triangle_texture/: TextureApp.cpp  TextureApp.ixx  TextureAppMain.cpp
src/samples/triangle_texture_buffer/: TextureBufferApp.cpp  TextureBufferApp.ixx  TextureBufferAppMain.cpp
src/shaders/: compute.comp.slang  cube_color_mvp.slang  deferred.vert.slang  deferred_gbuffer.frag.slang  deferred_gbuffer.slang  deferred_lighting.frag.slang  deferred_oit.frag.slang  deferred_oit_composite.frag.slang  deferred_opaque.slang  depth_prepass.vert.slang  fxaa.frag.slang  gamma_correction.frag.slang  global.inc.slang  gradient.comp.slang  grayscale.comp.slang  grayscale.frag.slang  lighting.inc.slang  myshader.slang  pixelisation.frag.slang  postprocess.inc.slang  quad.vert.slang  scene_input.inc.slang  shadertoy_circle.comp.slang  skybox.slang  smaa_blend_weight.comp.slang  smaa_blend_weight.frag.slang  smaa_blend_weigth.frag.slang  smaa_common.inc.slang  smaa_edge_detect.comp.slang  smaa_edge_detect.frag.slang  smaa_neighborhood_blend.comp.slang  smaa_neighborhood_blend.frag.slang  taa.frag.slang  triangle_color.slang  triangle_texture.slang  triangle_texture_buffer.slang  triangle_texture_buffer1.slang  triangle_texture_buffer2.slang  voronoi.frag.slang
tests/: tests.cpp
